--- a/Changes
+++ b/Changes
@@ -2,6 +2,10 @@ Revision history for MongoDBx-Queue
 
 {{$NEXT}}
 
+  [ADDED]
+
+  - Added 'search' and 'peek' methods to allow inspection of the queue
+
 0.002     2012-09-05 18:08:14 America/New_York
 
   [INCOMPATIBLE CHANGES]
