--- a/README.pod
+++ b/README.pod
@@ -8,7 +8,7 @@ MongoDBx::Queue - A message queue implemented with MongoDB
 
 =head1 VERSION
 
-version 0.003
+version 0.004
 
 =head1 SYNOPSIS
 
@@ -213,12 +213,14 @@ tasks if true or unreserved tasks if false.
 
 =head2 peek
 
-  $queue->peek( $task );
+  $task = $queue->peek( $task );
 
-Retrieves a copy of the task from the queue.  This is useful to retrieve all
+Retrieves a full copy of the task from the queue.  This is useful to retrieve all
 fields from a partial-field result from C<search>.  It is equivalent to:
 
   $self->search( { _id => $task->{_id} } );
+
+Returns undef if the task is not found.
 
 =head2 size
 
