--- a/Changes
+++ b/Changes
@@ -2,6 +2,10 @@ Revision history for MongoDBx-Queue
 
 {{$NEXT}}
 
+    [INTERNAL]
+
+    - Dropped Const::Fast as prerequisite
+
 0.004     2013-04-17 20:06:53 America/New_York
 
   [FIXED]
