--- a/Changes
+++ b/Changes
@@ -8,38 +8,38 @@ Revision history for MongoDBx-Queue
 
 0.004     2013-04-17 20:06:53 America/New_York
 
-  [FIXED]
+    [FIXED]
 
-  - Have peek() do the right thing for list or scalar return context
+    - Have peek() do the right thing for list or scalar return context
 
 0.003     2013-03-28 18:34:49 America/New_York
 
-  [ADDED]
+    [ADDED]
 
-  - Added 'search' and 'peek' methods to allow inspection of the queue
+    - Added 'search' and 'peek' methods to allow inspection of the queue
 
 0.002     2012-09-05 18:08:14 America/New_York
 
-  [INCOMPATIBLE CHANGES]
+    [INCOMPATIBLE CHANGES]
 
-  - reschedule_task() now takes a hashref of options using the same format
-    as add_task() instead of taking a scalar epoch seconds time argument
-  
-  [ADDED]
+    - reschedule_task() now takes a hashref of options using the same format
+        as add_task() instead of taking a scalar epoch seconds time argument
 
-  - add_task() now supports setting arbitrary priority
+    [ADDED]
 
-  [CHANGED]
+    - add_task() now supports setting arbitrary priority
 
-  - reserve_task() only find tasks up to a maximum priority; defaults to
-    time(); this makes "future" tasks invisible unless a different
-    maximum priority is requested
+    [CHANGED]
 
-  - generally improved documentation for consistency describing new
-    features
+    - reserve_task() only find tasks up to a maximum priority; defaults to
+        time(); this makes "future" tasks invisible unless a different
+        maximum priority is requested
 
+    - generally improved documentation for consistency describing new
+        features
 
 0.001     2012-08-30 17:34:16 America/New_York
 
-  - First release
+    - First release
 
+# vim: ts=4 sts=4 sw=4 et:
