add MooseX::Role::Logger for MooseX::Role::MongoDB

--- a/Changes
+++ b/Changes
@@ -2,6 +2,11 @@ Revision history for MongoDBx-Queue
 
 {{$NEXT}}
 
+    [FIXES]
+
+    - Consumes MooseX::Role::Logger as required by MooseX::Role::MongoDB
+      version 0.003 or later
+
 1.000     2013-09-22 20:57:32 America/New_York
 
     [INCOMPATIBLE CHANGES]
