Update for MongoDB v2.0.0

--- a/Changes
+++ b/Changes
@@ -2,6 +2,16 @@ Revision history for MongoDBx-Queue
 
 {{$NEXT}}
 
+2.000
+
+    [INCOMPATIBLE CHANGES]
+
+    - Requires MongoDB driver version 2.0.0 and MooseX::Role::MongoDB
+      v1.0.0
+
+    - 'safe' option removed; all reads and writes now use 'majority' read
+      and write concerns
+
 1.002     2014-01-24 23:05:20-05:00 America/New_York
 
     [FIXES]
