--- a/Changes
+++ b/Changes
@@ -2,6 +2,13 @@ Revision history for MongoDBx-Queue
 
 {{$NEXT}}
 
+2.001
+
+    [ADDED]
+
+    - Added 'version' option to toggle between legacy 'v1' implementation and
+      a new 'v2' implementation with better index coverage.
+
 2.000     2018-10-04 15:44:27-04:00 America/New_York
 
     [INCOMPATIBLE CHANGES]
